<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background= "@color/whitebgrnd"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    >
    <TextView
		android:id="@+id/coordinatesys"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="@color/darktext"
    	android:textSize="24sp"
    	android:textStyle="bold"
    	android:layout_gravity="center"
    	android:text="@string/coordinatesys_label"/>
	<Spinner 
	    android:id="@+id/coordsysspinner"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:drawSelectorOnTop="true"
	    android:prompt="@string/coordsys_prompt"/>
	<Spinner 
	    android:id="@+id/coordspinner"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:drawSelectorOnTop="true"
	    android:prompt="@string/coordtype_prompt"/>
	<TableLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:stretchColumns="1,2">
			<TableRow>
				<TextView
					android:id="@+id/latlabel"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingRight="20sp"
			    	android:text="@string/latitude_label"/>
			    <EditText
			    	android:id="@+id/latitude_text"
			    	android:editable="false"
			    	android:layout_span="2"
					android:inputType="numberSigned|numberDecimal"
				/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/lnglabel"
					android:textColor="@color/darktext"
					android:textStyle="bold"
					android:textSize="18sp"
			    	android:paddingRight="20sp"
			    	android:text="@string/longitude_label"/>
			    <EditText
			    	android:id="@+id/longitude_text"
			    	android:editable="false"
			    	android:layout_span="2"
					android:inputType="numberSigned|numberDecimal"
					/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/xlabel"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingRight="20sp"
			    	android:text="@string/x_label"/>
				<EditText
			    	android:id="@+id/x_text"
			    	android:editable="false"
			    	android:layout_span="2"
			    	android:paddingRight="20sp"
					android:inputType="numberSigned|numberDecimal"
					/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/xlabel"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:text="@string/y_label"/>
				<EditText
			    	android:id="@+id/y_text"
			    	android:editable="false"
					android:inputType="numberSigned|numberDecimal"
					android:layout_span="2"
					/>
			</TableRow>
			<TableRow>
				<RadioGroup
					  android:layout_span="3"
					  android:orientation="horizontal">
				  <RadioButton android:id="@+id/radio_feet"
				      android:layout_width="wrap_content"
				      android:layout_height="wrap_content"
				      android:paddingRight="12dip"
				      android:textColor="@color/darktext"
				      android:textStyle="bold"
			    	  android:textSize="18sp"
				      android:text="US Feet " />
				  <RadioButton android:id="@+id/radio_meters"
				      android:layout_width="wrap_content"
				      android:layout_height="wrap_content"
				      android:textColor="@color/darktext"
				      android:textStyle="bold"
			    	  android:textSize="18sp"
				      android:text="Meters " />
				 </RadioGroup>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/gpsstatus"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:text="@string/gpsstatus"/>
			    <TextView
					android:id="@+id/gpsacc"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:text="@string/gpsacc"/>
			    <TextView
					android:id="@+id/locprovider"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:text="@string/locprovider"/>
		    </TableRow>
			<TableRow>
				<EditText
			    	android:id="@+id/gpsstatus_text"
			    	android:editable="false"
					/>
				<EditText
			    	android:id="@+id/gpsacc_text"
			    	android:editable="false"
					/>
				<EditText
			    	android:id="@+id/locprovider_text"
			    	android:editable="false"
					/>
			</TableRow>
    	</TableLayout>
</LinearLayout>
