<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="wrap_content" 
     android:background= "@color/whitebgrnd"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:layout_width="fill_parent">
    <RelativeLayout 
	     android:gravity="bottom" 
	     android:layout_height="wrap_content" 
	     android:layout_width="fill_parent">
	     <ImageView
			android:id="@+id/measureglobe"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/icon">
		</ImageView>
		<TextView
			android:id="@+id/programversion"
			android:layout_toRightOf="@id/measureglobe"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:textSize="24sp"
			android:gravity="bottom"
			android:textColor="@color/maintext"
			android:text="@string/about_text_title" >
	    </TextView>
    </RelativeLayout>
    <View
   		android:layout_width="fill_parent"
       	android:layout_height="2dip"
       	android:background="#FF000000">
    </View>
    <ScrollView android:layout_marginBottom="50dip" 
	   android:id="@+id/ScrollView01" 
	   android:layout_height="wrap_content" 
	   android:layout_width="fill_parent">
          <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content">
			  <TextView
				android:id="@+id/about_content_description"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/maintext"
				android:text="@string/hints_text">
			</TextView>
			
		 </LinearLayout>
     </ScrollView>
     <RelativeLayout android:layout_marginTop="-50dip"
     android:layout_height="wrap_content" 
     android:layout_width="fill_parent">
     <View
     	android:id="@+id/solidline_bottom"
   		android:layout_width="fill_parent"
       	android:layout_height="2dip"
       	android:background="#FF000000">
    </View>
     <ImageView
		android:id="@+id/elecktrobolt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/solidline_bottom"
		android:src="@drawable/bolt">
	</ImageView>
	<TextView
		android:id="@+id/programtitle"
		android:layout_toRightOf="@id/elecktrobolt"
		android:paddingLeft="10dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="@color/maintext"
    	android:textSize="16sp"
    	android:textStyle="bold"
    	android:text="@string/company_title">
    </TextView>
    <TextView
		android:id="@+id/copyright"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/programtitle"
		android:layout_alignLeft="@+id/programtitle"
		android:paddingLeft="20dip"
		android:textColor="@color/maintext"
    	android:textSize="10sp"
    	android:text="@string/copyright">
    </TextView>
     </RelativeLayout>
</LinearLayout>
