<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background= "@color/darkgrey"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    >
    <TextView
		android:id="@+id/coordinatesys"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="@color/darktext"
    	android:textSize="18sp"
    	android:textStyle="bold"
    	android:layout_gravity="center"
    	android:text="@string/pointstore_label"/>
    <TableLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:stretchColumns="1,2">
		<TableRow>
			<TextView
				android:id="@+id/spt_latlabel"
				android:textColor="@color/darktext"
		    	android:textStyle="normal"
		    	android:textSize="14sp"
		    	android:paddingRight="20sp"
		    	android:text="@string/latitude_label"/>
		    <TextView
		    	android:id="@+id/spt_latitude_text"
		    	android:layout_span="2"
		    	android:textColor="@color/darktext"
		    	android:textStyle="normal"
		    	android:textSize="14sp"
		    	android:text=""
			/>
		</TableRow>
		<TableRow>
			<TextView
				android:id="@+id/spt_lnglabel"
				android:textColor="@color/darktext"
				android:textStyle="normal"
				android:textSize="14sp"
		    	android:paddingRight="20sp"
		    	android:text="@string/longitude_label"/>
		    <TextView
		    	android:id="@+id/spt_longitude_text"
		    	android:layout_span="2"
		    	android:textColor="@color/darktext"
		    	android:textStyle="normal"
		    	android:textSize="14sp"
		    	android:text=""
				/>
		</TableRow>
		<TableRow>
			<TextView
				android:id="@+id/spt_gpsstatus"
				android:textColor="@color/darktext"
		    	android:textStyle="bold"
		    	android:gravity="center_horizontal|center_vertical"
		    	android:text="@string/gpsstatus"/>
		    <TextView
				android:id="@+id/spt_gpsacc"
				android:textColor="@color/darktext"
		    	android:textStyle="bold"
		    	android:gravity="center_horizontal|center_vertical"
		    	android:text="@string/gpsacc"/>
		    <TextView
				android:id="@+id/spt_locprovider"
				android:textColor="@color/darktext"
		    	android:textStyle="bold"
		    	android:gravity="center_horizontal|center_vertical"
		    	android:text="@string/locprovider"/>
	    </TableRow>
	    <TableRow>
			<TextView
				android:id="@+id/spt_gpsstatus_text"
				android:textColor="@color/darktext"
				android:background="@color/textbkgrd"
		    	android:textStyle="bold"
		    	android:textSize="24sp"
		    	android:layout_height="fill_parent"
		    	android:layout_width="wrap_content"
		    	android:paddingRight="5sp"
		    	android:paddingLeft="5sp"
		    	android:gravity="center_horizontal|center_vertical"
		    	android:text=""/>
			<TextView
				android:id="@+id/spt_gpsacc_text"
				android:textColor="@color/darktext"
				android:background="@color/textbkgrd"
		    	android:textStyle="bold"
		    	android:textSize="24sp"
		    	android:layout_height="fill_parent"
		    	android:layout_width="wrap_content"
		    	android:paddingRight="5sp"
		    	android:paddingLeft="5sp"
		    	android:gravity="center_horizontal|center_vertical"
		    	android:text=""/>
			<TextView
				android:id="@+id/spt_locprovider_text"
				android:textColor="@color/darktext"
				android:background="@color/textbkgrd"
		    	android:textStyle="bold"
		    	android:textSize="24sp"
		    	android:layout_height="fill_parent"
		    	android:layout_width="wrap_content"
		    	android:paddingRight="5sp"
		    	android:paddingLeft="5sp"
		    	android:gravity="center_horizontal|center_vertical"
		    	android:text=""/>
		</TableRow>
		<TableRow>
			<TextView
				android:id="@+id/spt_pointname_label"
				android:textColor="@color/darktext"
		    	android:textStyle="bold"
		    	android:textSize="16sp"
		    	android:layout_span="2"
		    	android:text="@string/store_point_name_label"/>
		   	<TextView
				android:id="@+id/spt_pointname_label"
				android:textColor="@color/darktext"
		    	android:textStyle="bold"
		    	android:textSize="16sp"
		    	android:layout_span="1"
		    	android:text="@string/store_symbol_label"/>
		</TableRow>
		<TableRow>
			<EditText
		    	android:id="@+id/spt_pointname_text"
		    	android:inputType="text"
		    	android:layout_span="2"
		    	android:editable="true"
				/>
			<ImageButton
			    android:id="@+id/spt_sym_btn"
			    android:layout_width="56dip"
			    android:layout_height="56dip"
			    android:layout_span="1"
			    android:src= "@drawable/redflag2"
			     />	
		</TableRow>
		<TableRow>
			<ImageButton
		    	android:id="@+id/storeptdb_btn"
		    	android:layout_width="wrap_content"
				android:layout_height="64dip"
				android:layout_span="3"
				android:src="@drawable/storept_btn"
				/>
		</TableRow>
		<TableRow>
			<ImageButton
		    	android:id="@+id/getgeocode_btn"
				android:layout_width="wrap_content"
				android:layout_height="64dip"
				android:layout_span="3"
				android:src="@drawable/address"
				/>
		</TableRow>
		<TableRow>
			<ImageButton
		    	android:id="@+id/getnote_btn"
				android:layout_width="wrap_content"
				android:layout_height="64dip"
				android:layout_span="3"
				android:src="@drawable/notebtn"
				/>
		</TableRow>
		<TableRow>
			<ImageButton
		    	android:id="@+id/getcamera_btn"
				android:layout_width="wrap_content"
				android:layout_height="64dip"
				android:layout_span="3"
				android:src="@drawable/camerabtn"
				/>
		</TableRow>
	</TableLayout>
</LinearLayout>