<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background= "@color/whitebgrnd"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    >    	
    <TableLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:stretchColumns="1,3">
			<TableRow>
				<ImageView
					android:id="@+id/nav_symbol"
					android:layout_width="48dip"
					android:layout_height="48dip"
					android:src="@drawable/redflag2">
				</ImageView>
			    <TextView
			    	android:id="@+id/nav_pointname"
					android:textColor="@color/darktext"
					android:layout_width="fill_parent"
	    			android:layout_height="48dip"
			    	android:textStyle="bold"
			    	android:textSize="20sp"
			    	android:gravity="bottom"
			    	android:paddingLeft="20sp"
			    	android:layout_span="2"
			    	android:text=""/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/nav_latlabel"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="12sp"
			    	android:text="@string/latitude_label"/>
			    <TextView
			    	android:id="@+id/nav_latvalue"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingLeft="20sp"
			    	android:layout_span="3"
			    	android:text="0.0"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/nav_lnglabel"
					android:textColor="@color/darktext"
					android:textStyle="bold"
					android:textSize="12sp"
			    	android:text="@string/longitude_label"/>
			    <TextView
			    	android:id="@+id/nav_lngvalue"
			    	android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingLeft="20sp"
			    	android:layout_span="3"
			    	android:text="0.0"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/nav_coordx_label"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="12sp"
			    	android:text="@string/x_coord_label"/>
			    <TextView
			    	android:id="@+id/nav_coordx"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingLeft="20sp"
			    	android:layout_span="3"
			    	android:text="0.0"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/nav_coordy_label"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="12sp"
			    	android:text="@string/y_coord_label"/>
			    <TextView
			    	android:id="@+id/nav_coordy"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingLeft="20sp"
			    	android:layout_span="3"
			    	android:text="0.0"/>
			</TableRow>
			<TableRow>
				<View
					android:layout_span="4"
			   		android:layout_width="fill_parent"
			       	android:layout_height="2dip"
			       	android:background="#FF000000">
			    </View>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/nav_currentpos_label"
					android:layout_span="4"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/darktext"
			    	android:textSize="24sp"
			    	android:textStyle="bold"
			    	android:layout_gravity="center"
			    	android:text="@string/nav_currentposition_label"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/nav_latlabelcp"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="12sp"
			    	android:text="@string/latitude_label"/>
			    <TextView
			    	android:id="@+id/nav_latvaluecp"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingLeft="20sp"
			    	android:layout_span="3"
			    	android:text="0.0"/>
			</TableRow>
			<TableRow>
				<TextView
					android:layout_span="1"
					android:id="@+id/nav_lnglabelcp"
					android:textColor="@color/darktext"
					android:textStyle="bold"
					android:textSize="12sp"
			    	android:text="@string/longitude_label"/>
			    <TextView
			   		android:layout_span="3"
			    	android:id="@+id/nav_lngvaluecp"
			    	android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingLeft="20sp"
			    	android:text="0.0"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/nav_coordx_labelcp"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="12sp"
			    	android:text="@string/x_coord_label"/>
			    <TextView
			    	android:id="@+id/nav_coordxcp"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingLeft="20sp"
			    	android:layout_span="3"
			    	android:text="0.0"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/nav_coordy_labelcp"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="12sp"
			    	android:text="@string/y_coord_label"/>
			    <TextView
			    	android:id="@+id/nav_coordycp"
					android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingLeft="20sp"
			    	android:layout_span="3"
			    	android:text="0.0"/>
			</TableRow>
			<TableRow>
				<View
					android:layout_span="4"
			   		android:layout_width="fill_parent"
			       	android:layout_height="2dip"
			       	android:background="#FF000000">
			    </View>
			</TableRow>
			<TableRow>
				<TextView
				android:id="@+id/navigate_label"
				android:layout_span="4"
				android:textColor="@color/darktext"
		    	android:textSize="24sp"
		    	android:textStyle="bold"
		    	android:layout_gravity="center"
		    	android:text="@string/navigate_label"/>
		    </TableRow>
		    <TableRow>
				<TextView
					android:id="@+id/nav_distancelabel"
					android:textColor="@color/darktext"
					android:textStyle="bold"
					android:textSize="12sp"
			    	android:text="Distance: "/>
			    <TextView
			    	android:layout_span="3"
			    	android:id="@+id/nav_distance"
			    	android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingLeft="20sp"
			    	android:text="0.0"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/nav_bearinglabel"
					android:textColor="@color/darktext"
					android:textStyle="bold"
					android:textSize="12sp"
			    	android:text="Bearing "/>
			    <TextView
			    	android:id="@+id/nav_bearing"
			    	android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingLeft="10sp"
			    	android:text="666.0"/>
				<TextView
					android:id="@+id/nav_headinglabel"
					android:textColor="@color/darktext"
					android:textStyle="bold"
					android:textSize="12sp"
			    	android:text="Heading "/>
			    <TextView
			    	android:id="@+id/nav_heading"
			    	android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingLeft="10sp"
			    	android:text="0.0"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/nav_speedlabel"
					android:textColor="@color/darktext"
					android:textStyle="bold"
					android:textSize="12sp"
			    	android:text="Speed "/>
			    <TextView
			    	android:id="@+id/nav_speed"
			    	android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingLeft="10sp"
			    	android:text="0.0"/>
				<TextView
					android:id="@+id/nav_vmglabel"
					android:textColor="@color/darktext"
					android:textStyle="bold"
					android:textSize="12sp"
			    	android:text="VMG "/>
			    <TextView
			    	android:id="@+id/nav_vmg"
			    	android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingLeft="10sp"
			    	android:text="0.0"/>
			</TableRow>
			<TableRow>
				<TextView
					android:id="@+id/nav_etalabel"
					android:textColor="@color/darktext"
					android:textStyle="bold"
					android:textSize="12sp"
			    	android:text="ETA "/>
			    <TextView
			    	android:id="@+id/nav_eta"
			    	android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingLeft="20sp"
			    	android:text="0.0"/>
				<TextView
					android:id="@+id/nav_ettalabel"
					android:textColor="@color/darktext"
					android:textStyle="bold"
					android:textSize="12sp"
			    	android:text="ETTA "/>
			    <TextView
			    	android:id="@+id/nav_etta"
			    	android:textColor="@color/darktext"
			    	android:textStyle="bold"
			    	android:textSize="18sp"
			    	android:paddingLeft="20sp"
			    	android:text="0.0"/>
			</TableRow>
			<TableRow>
				<View
					android:layout_span="4"
			   		android:layout_width="fill_parent"
			       	android:layout_height="2dip"
			       	android:background="#FF000000">
			    </View>
			</TableRow>
		</TableLayout>
	
</LinearLayout>
